# multiagent

./: .gitignore  README.md  download_roboflow_model.py  download_roboflow_no_ssl.py  download_roboflow_with_package.py  reload_modules.py  requirements.txt  test_owlv2_detector.py  test_pytorch_import.py  test_urdf_ik.py  update_imports.py
MaskRCNN_Grasp_Detection/: convert_weights_to_pytorch.py  requirements.txt  run_training.bat  setup_training.bat  test_dataset.bat  test_pytorch_dataset.py  train_maskrcnn.py  train_pytorch.bat  train_pytorch_maskrcnn.py
assets/: Franka_Stool.usd  Main_camera.usd  Physics_Lidar_Rotating_With_Cube.usd  Table_Rounded.usd  franka_curobo.yml
backups/: create_backup.bat
backups/cube_randomization_fix_20260109_205754/: CHANGES_SUMMARY.md  object_selection_env.py.backup  object_selection_env_rrt.py.backup
datasets/augmented_yolo_v2/: dataset.yaml
datasets/geometric_shapes_yolo/: dataset.yaml
franka_object_detection_pick_place/: CMakeLists.txt  package.xml
franka_object_detection_pick_place/config/: params.yaml  planning_scene.yaml
franka_object_detection_pick_place/include/franka_pick_place/: franka_pick_and_place.hpp  vision.hpp
franka_object_detection_pick_place/launch/: gazebo_fr3.launch.py
franka_object_detection_pick_place/scripts/: spawn_multiple_cubes.py
franka_object_detection_pick_place/src/: main.cpp  vision_main.cpp
franka_object_detection_pick_place/src/mtc/: cube_tracking.cpp  franka_pick_and_place.cpp  mtc.cpp  planning_scene_loader.cpp
franka_object_detection_pick_place/src/utilities/: test_utilities.cpp
franka_object_detection_pick_place/src/vision/: vision.cpp
franka_object_detection_pick_place/worlds/: pick_place_with_bins.sdf
holonomic/description/: holonomic_robot3.urdf  tmp53oaklfq.urdf
models/augmented_shapes_v2/: args.yaml  results.csv
models/geometric_shapes/: args.yaml
models/geometric_shapes2/: args.yaml
models/geometric_shapes3/: args.yaml  results.csv
scripts/: cobot_pick_place_script_editor.py  cobot_pick_place_with_container.py  cobot_pick_place_with_container_v2.0.py  export_yolov8_tensorrt.py  franka_pick_place_script_editor_1.py  franka_pick_place_with_container_1.py  franka_pick_place_with_container_v2.0.py  generate_augmented_dataset.py  generate_augmented_dataset_v2.py  inference_result.json  prepare_isaacsim_dataset.py  start_isaac_sim_cobot.py  start_isaac_sim_franka.py  test_optimization_performance.py  test_original_imports.py  test_roboflow_model.py  test_yolov8_base_model.py  test_yolov8_my_model.py  train_on_augmented_dataset.py
scripts/Backup/: franka_rrt_2cubes_v1.0.py  franka_rrt_2cubes_v1.1.py  franka_rrt_2cubes_v1.2 - Copy (2).py  franka_rrt_2cubes_v1.2 - Copy (3).py  franka_rrt_2cubes_v1.2 - Copy.py  franka_rrt_2cubes_v1.2.py
scripts/Cobot_Trajectory_Generator/: cobot_rrt_2objects_v1.2.py  cobot_trajectory_generator - Copy.py  cobot_trajectory_generator.py  franka_rrt_2cubes_v1.2.py
scripts/RRT/: README.md  cobot_pick_place_with_container_rrt_v3.0.py  cobot_rrt_interactive.py  cobot_rrt_interactive_standalone.py  franka_rrt_2cubes.py  franka_rrt_interactive.py  franka_rrt_interactive_standalone.py  object_manager.py  rrt_controller.py  scene_setup.py
scripts/RRT with Kinematics Solver/: CHANGELOG_v1.5.2.md  cobot_rrt_2objects_v1.5.py  cobot_rrt_RTX_Lidar_v1.2.py  cobot_rrt_physXLidar_depth_camera_rl_v1.9.py  franka_batchik_physXLidar_depth_camera_v1.8.py  franka_rrt_2cubes_holonomic_base_v1.3.py  franka_rrt_2cubes_v1.4.py  franka_rrt_2cubes_v1.5 - working fine.py  franka_rrt_2cubes_v1.6.py  franka_rrt_9cylinders_v1.5 - Copy.py  franka_rrt_9cylinders_v1.5.py  franka_rrt_ik_RTX Lidar - Obstacle detection - Copy (9).py  franka_rrt_objDetection_pickplace_v2.0.py  franka_rrt_physXLidar_depth_camera_objDetection_v1.7.py  franka_rrt_physXLidar_depth_camera_v1.5.py  franka_rrt_with_ik_retryPick_1.2 - Copy (2).py  franka_rrt_with_ik_retryPick_1.2 - Copy (3).py  franka_rrt_with_ik_retryPick_withObstacle_1.2 - Copy (4).py  franka_rrt_with_ik_retryPick_withObstacle_1.2 - Copy (5).py  franka_rrt_with_ik_retryPick_withObstacle_1.2 - Copy (6).py  franka_rrt_with_ik_retryPick_withObstacle_1.2_working - Copy (7).py  franka_rrt_with_ik_retryPick_withObstacle_1.2_working with 3 cubes 2 obstacles - Copy (8).py  obstacle transforms.txt  ur10e_rrt_9cubes_v1.5.py
scripts/Reinforcement Learning/: IMPROVING_NEGATIVE_REWARDS.md  WHY_GAT_BETTER_THAN_CNN.md  astar_rl_episode_viz - Copy (2).py  astar_rl_episode_viz - Copy (3).py  astar_rl_episode_viz - Copy.py  astar_rl_episode_viz.py  (+33 more)
(+2205 files in other folders)
